# AliNA

./: .gitignore  LICENSE  README.md  setup.cfg
alina/: __init__.py  alina.py  api.py  dataset.py  dictionary.py  fold.py
alina/model/: __init__.py  model.py  modules.py
alina/utils/: __init__.py  validation.py
