[metadata]
name = alina
version = 1.2.0
author = Artem Mukanov
url = https://github.com/XELARI-CORP/AliNA
description = RNA secondary structure prediction algorithm
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe=False,
packages = find:
python_requires = >= 3.8
install_requires =
    numpy
    tqdm
    naskit<1.0
    
    
[options.package_data]
alina.model =
    Pretrained_augmented.pth
    

[options.entry_points]
console_scripts =
    alina = alina.fold:main
